Added SEO meta tags and thumbnail image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/ss512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shivendra Sharma</title>
+    <title>Shivendra Sharma | Portfolio</title>
+    <meta name="description" content="Frontend Developer Portfolio of Shivendra Sharma. Check out experience, and contact details.">
+    <meta name="keywords" content="Shivendra, Portfolio, React, Frontend Developer">
+    <meta name="author" content="Shivendra Sharma">
+
+    <meta property="og:title" content="Shivendra Sharma | Portfolio" />
+    <meta property="og:url" content="https://sharmashivendra.vercel.app/" />
+    <meta property="og:image" content="https://sharmashivendra.vercel.app/thumbnail.png" />
+    <meta property="og:description" content="Explore my experience in frontend development will be developing and adding projects over here." />
+
   </head>
   <body>
     <div id="root"></div>
