--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Shivendra Sharma | Portfolio" />
     <meta property="og:url" content="https://sharmashivendra.vercel.app/" />
     <meta property="og:image" content="https://sharmashivendra.vercel.app/thumbnail.png" />
-    <meta property="og:description" content="Explore my experience in frontend development will be developing and adding projects over here." />
+    <meta property="og:description" content="Explore the professional portfolio of Shivendra Sharma, a frontend developer specializing in React.js, JavaScript, and responsive web design. This website highlights experience, showcases upcoming projects, and is built using modern tools including React, Tailwind CSS, and semantic HTML/CSS." />
 
   </head>
   <body>
